--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <nav class="header-nav">
           <div class="container">
             <div class="header-nav__logo">Stickerz</div>
-            <label for="burger-checkbox" class="burger-icon">☰</label>
-            <input id="burger-checkbox" type="checkbox">
+            <!-- <label for="burger-checkbox" class="burger-icon">☰</label>
+            <input id="burger-checkbox" type="checkbox"> -->
             <div class="header-nav__menu">
               <a href="#home" class="header-nav__menu-item">Home</a>
               <a href="#products" class="header-nav__menu-item">Products</a>
