added class container

--- a/index.html
+++ b/index.html
@@ -19,12 +19,11 @@
               <a href="#home" class="header-nav__menu-item">Home</a>
               <a href="#products" class="header-nav__menu-item">Products</a>
               <a href="#contacts" class="header-nav__menu-item">Contacts</a>
-              <a href="cart.html" class="header-nav__menu-item">
-                Cart</a>
+              <a href="cart.html" class="header-nav__menu-item">Cart</a>
             </div>
           </div>
         </nav>
-        <div class="header-banner">
+        <div class="header-banner container">
           <h1 class="header-banner__h1">Stickerz</h1>
           <div class="button-container">
             <a href="#products" class="header-banner__button button"><span>Shop now</span></a>
